# prototype-project

./: .env.example  .gitattributes  .gitignore  Prototype.ipynb  README_DROPIN.md  Untitled.ipynb  app_streamlit.py  app_streamlit_audit.py  app_streamlit_audit_pilot.py  docker-compose.yml  env.yml  example_signers.json  fix_sample.py  generate_golden.py  pyproject.toml  requirements.txt  run_streamlit.ps1  setup_baseline.py  smoke_test.py  te_engine.py
.github/workflows/: ci.yml
_dropin/: Dockerfile
_dropin/src/: app_api.py
data/: iris.onnx  mock_recruitment.csv
data/cases/: README.md
data/golden/: canonical_v1_golden.csv
data/input/: sample_input.csv  sample_input_rich.csv
data/mappings/: mapping_demo.yaml
schemas/: dap.v1.schema.json  hti1.card.v1.schema.json
src/: app_api.py  app_api_predict.py  app_streamlit.py  app_streamlit_predict.py  config.py  demo_artifacts.py  fairness.py  hello.py  metrics.py  onnx_predict.py  report_docx.py  validation.py
src/trial_equity/: __init__.py  age.py  audit.py  cli.py  enums.py  (+4 more)
src/trial_equity.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: _disabled_test_audit_flow.py  test_audit_trail.py  test_case_basic_mapping.py  test_case_diverse_mapping.py  test_cli.py  test_cli_parity.py  test_core.py  test_exports_v1.py  test_helpers.py  test_pilot_ready_suite.py  test_runtime_env.py
tools/: generate_cases.py  make_mock_data.py
trial_equity/: __init__.py  cli.py  io_utils.py  mapping_runtime.py  metrics.py  normalize.py  schema.py
trial_equity.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
(+22 files in other folders)
