[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trial_equity"
version = "1.0.0"
description = "Trial Equity prototype: CLI + Streamlit + metrics"
authors = [{ name = "Paul Mills" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pandas>=2.2",
  "pyyaml>=6",
  "scipy>=1.11",
  "openpyxl>=3.1",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
app = [
  "streamlit>=1.36",
]
test = [
  "pytest>=8",
]

[project.scripts]
te = "trial_equity.cli:main"
